Changed the app logo asset. set up the order page to load items from the cart using recycler. // under contruction

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".View.ItemView"
+            android:name=".adapter.OrderAdapter"
             android:exported="false" />
         <activity
             android:name=".View.AdminCompleteInfo"
