--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,17 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".adapter.AdminMenuItemView"
+            android:name=".OrderActivity"
+            android:exported="false"
+            android:label="@string/title_activity_order"
+            android:theme="@style/Theme.ByteDuo" />
+        <activity
+            android:name=".MainActivity"
             android:exported="false" />
+        <activity
+            android:name=".EditItemDialogFragment"
+            android:exported="false" />
+        <activity android:name=".View.CardPaymentActivity" />
         <activity
             android:name=".adapter.CartAdapter"
             android:exported="false" />
@@ -26,9 +35,6 @@
             android:exported="false" />
         <activity
             android:name=".Controller.AdminMain"
-            android:exported="false" />
-        <activity
-            android:name=".Controller.Orders"
             android:exported="false" />
         <activity
             android:name=".Controller.CustomerMain"
